@@ -1,17 +1,18 @@
 #define DEBUG 1
 
-#include "PID_v1.h"
-#include <stdint.h>
-#include "printf.h"
 #include <Arduino.h>
+#include <stdint.h>
+#include "PID_v1.h"
+#include "printf.h"
+#include "utils.h"
 
 double pid_setpoint_angle, pid_input_angle, pid_output_angle;
 double pid_setpoint_speed, pid_input_speed, pid_output_accel;
 
 // pid to obtain the desired angle given the current speed and the target speed
-PID pid_controller_angle(&pid_input_speed, &pid_output_angle, &pid_setpoint_speed, 1, 0.1, 0.1, DIRECT);
+PID pid_controller_angle(&pid_input_speed, &pid_output_angle, &pid_setpoint_speed, 0.1, 0.1, 0.1, DIRECT);
 // pid to obtain the desired speed given the current angle and the desired angle
-PID pid_controller_speed(&pid_input_angle, &pid_output_accel, &pid_setpoint_angle, 2, 0.1, 0.1, DIRECT);
+PID pid_controller_speed(&pid_input_angle, &pid_output_accel, &pid_setpoint_angle, 0.1, 0.1, 0.1, DIRECT);
 
 //  * Get the current angle from the MPU
 //  * Estimate the current speed
@@ -28,7 +29,9 @@ void get_pid_motor_speed(int16_t * motor_accel, float angle, float angle_old, in
   pid_controller_angle.Compute();
 
 #if DEBUG
-  prints("Angle PID: setpoint: %f input: %f output (angle): %f\n", pid_setpoint_speed, pid_input_speed, pid_output_angle);
+  runEvery(1000) {
+    prints("Angle PID: setpoint: %f input: %f output (angle): %f\n", pid_setpoint_speed, pid_input_speed, pid_output_angle);
+  }
 #endif
 
   // PID given the target angle and the current angle
@@ -38,7 +41,9 @@ void get_pid_motor_speed(int16_t * motor_accel, float angle, float angle_old, in
   pid_controller_speed.Compute();
 
 #if DEBUG
-  prints("Speed PID: setpoint: %f  input: %f output (acceleration): %f", pid_setpoint_angle, pid_input_angle, pid_output_accel);
+  runEvery(1000) {
+    prints("Speed PID: setpoint: %f  input: %f output (acceleration): %f", pid_setpoint_angle, pid_input_angle, pid_output_accel);
+  }
 #endif
 
   motor_accel[0] = (int16_t)pid_output_accel;
