@@ -1,3 +1,6 @@
+* added runEvery macro to simplify debug information
+* changed all the debug information to use the new macro
+
 Dev - 08/01/16
 * removed period calculation out of the callback function, was taking too long and stalling the program
 * changed the modules function to calculate acceleration instead of velocity
